// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> UI snapshot renders with custom props 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(-5%);
    -ms-transform: translateX(-5%);
    transform: translateX(-5%);
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(-5%);
    -ms-transform: translateX(-5%);
    transform: translateX(-5%);
  }
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background: #BD200F;
  overflow: hidden;
  -webkit-transition: opacity 350ms ease-in-out 500ms;
  transition: opacity 350ms ease-in-out 500ms;
  width: 100%;
  z-index: 2;
  height: 5px;
}

.emotion-0 {
  position: absolute;
  width: 100%;
  height: 5px;
  background-color: #f4f2b0;
  -webkit-animation: animation-0 30s ease-in;
  animation: animation-0 30s ease-in;
  -webkit-transform: translateX(-5%);
  -ms-transform: translateX(-5%);
  transform: translateX(-5%);
  -webkit-transition: -webkit-transform 350ms ease-in-out;
  -webkit-transition: transform 350ms ease-in-out;
  transition: transform 350ms ease-in-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 350ms ease-in-out;
  -webkit-transition: transform 350ms ease-in-out;
  transition: transform 350ms ease-in-out;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  />
</div>
`;

exports[`<ProgressBar /> UI snapshot renders with default props 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(-5%);
    -ms-transform: translateX(-5%);
    transform: translateX(-5%);
  }
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background: #f8f8fa;
  overflow: hidden;
  -webkit-transition: opacity 350ms ease-in-out 500ms;
  transition: opacity 350ms ease-in-out 500ms;
  width: 100%;
  z-index: 2;
  height: 4px;
}

.emotion-0 {
  position: absolute;
  width: 100%;
  height: 4px;
  background-color: #332e54;
  -webkit-animation: animation-0 20s ease-in;
  animation: animation-0 20s ease-in;
  -webkit-transform: translateX(-5%);
  -ms-transform: translateX(-5%);
  transform: translateX(-5%);
  -webkit-transition: -webkit-transform 350ms ease-in-out;
  -webkit-transition: transform 350ms ease-in-out;
  transition: transform 350ms ease-in-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 350ms ease-in-out;
  -webkit-transition: transform 350ms ease-in-out;
  transition: transform 350ms ease-in-out;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  />
</div>
`;
